# qc-baselib-py

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/json_validator/: README.md  json_validator.py  requirements.txt
examples/json_validator/config/: invalid.xml  skipped.xml  valid.xml
examples/json_validator/data/: invalid.json  valid.json
examples/report_module_text/: README.md  report_format_text.py  requirements.txt
licenses/: readme.md
qc_baselib/: __init__.py  configuration.py  report.py  result.py  results.py
qc_baselib/models/: __init__.py  common.py  config.py  report.py  result.py
report_modules/report_module_text/: report_format_text.py  run.sh
tests/: test_configuration.py  test_models.py  test_report.py  test_result.py  test_results.py
tests/data/: DemoCheckerBundle_config.xml  config_test_output.xml  demo_checker_bundle.xqar  demo_checker_bundle_extended.xqar  ordered_config.xml  report_test_output.xqar  result_markdown_docs.md  result_test_output.xqar  result_test_output_coalesced.xqar
